# novus

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh
.cargo/: config.toml
applications/: Cargo.toml
applications/src/: lib.rs
src/: arch.rs  dev.rs  elf.rs  entry.asm  error.rs  io.rs  linker.ld  locks.rs  log.rs  main.rs  marco.rs  mem.rs  proc.rs  syscall.rs  trap.rs  usr.rs
src/arch/: registers.rs  sbi.rs
src/arch/registers/: csr.rs  gpr.rs  values.rs
src/dev/: memory.rs  ns16550a.rs  plic.rs  virtio_blk.rs  virtio_blk_device.rs
src/dev/virtio_blk/: legacy.rs  mod.rs  modern.rs  queue.rs
src/dev/virtio_blk_device/: legacy.rs  modern.rs  queue.rs
src/io/: uart.rs
src/mem/: addr.rs  alloc.rs  buddy.rs  buddy_system.rs  frame.rs  frame_allocator.rs  linked_list.rs  page_alloc.rs  page_table.rs  slub.rs
src/mem/page_table/: utils.rs
src/syscall/: func.rs
