[package]
name = "novus"
version = "0.1.0"
edition = "2024"
authors = ["Netsalmon <netsalmon@disroot.org>"]
description = "A simple operating system"
license = "GPL-3"



[[bin]]
name = "novus"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
paste = "1.0.15"
fdt = "0.1.5"
log = "0.4.32"

[features]
alloc = []
page_table = [ "alloc" ]
